TiffReader: immutable results of allMaps/allIFDs (prevents ability to destroy internal cache)