@@ -233,14 +233,14 @@ public class TiffParser extends TiffReader {
      * Returns thumbnail IFDs.
      */
     public List<TiffIFD> allThumbnailIFDs() throws IOException, FormatException {
-        return allIFDs().stream().filter(TiffIFD::isThumbnail).collect(Collectors.toList());
+        return allIFDs().stream().filter(TiffIFD::isThumbnail).toList();
     }
 
     /**
      * Returns non-thumbnail IFDs.
      */
     public List<TiffIFD> allNonThumbnailIFDs() throws IOException, FormatException {
-        return allIFDs().stream().filter(ifd -> !ifd.isThumbnail()).collect(Collectors.toList());
+        return allIFDs().stream().filter(ifd -> !ifd.isThumbnail()).toList();
     }
 
     /**
